--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
+    <title>CODING PARTY</title>
+
+    <link rel="icon" href="ieee_favicon.ico" type="image/x-icon"/>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -18,12 +20,30 @@
         <div class="row">
           <div class="col-lg-12 my-auto">
             <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
+              <strong>CODING PARTY</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-12 my-auto">
-            <button class="btn btn-primary btn-xl">Find Out More</button>
+            <!-- Begin MailChimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+              #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+              /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup">
+            <form action="https://codingparty.us18.list-manage.com/subscribe/post?u=2226ba01df5f804e9e4d77261&amp;id=02f6111007" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2226ba01df5f804e9e4d77261_02f6111007" tabindex="-1" value=""></div>
+                <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+            </div>
+
+<!--End mc_embed_signup-->
+            
           </div>
         </div>
       </div>
