--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- Begin MailChimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
             <style type="text/css">
-              #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+              #mc_embed_signup{}
               /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style>
@@ -37,7 +37,7 @@
                 <div id="mc_embed_signup_scroll">
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2226ba01df5f804e9e4d77261_02f6111007" tabindex="-1" value=""></div>
-                <div class=""><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </div>
             </form>
             </div>
