--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
+    <title>CodingParty</title>
   
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -19,7 +19,7 @@
         <div class="row">
           <div class="col-lg-12 my-auto">
             <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
+              <strong>Coding Party</strong>
             </h1>
             <hr>
           </div>
